--- a/index.html
+++ b/index.html
@@ -14,20 +14,17 @@
   <header>
       <nav class="cf">
           <ul class="cf">
-              <li class="hide-on-small">
-                  <a href="index.html#showcase">Home</a>
+               <li>
+                  <a href="index.html#showcase">Sobre o jogo</a>
               </li>
               <li>
-                  <a href="http://127.0.0.1:5500/index.html#showcase">Sobre o jogo</a>
+                  <a href="index.html#music">Desenvolvedores</a>
               </li>
               <li>
-                  <a href="http://127.0.0.1:5500/index.html#music">Desenvolvedores</a>
+                  <a href="index.html#video">Video do jogo</a>
               </li>
               <li>
-                  <a href="http://127.0.0.1:5500/index.html#video">Video do jogo</a>
-              </li>
-              <li>
-                  <a href="http://127.0.0.1:5500/index.html#download">Download</a>
+                  <a href="index.html#download">Download</a>
               </li>
           </ul>
       </nav>
