--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <!-- Showcase and Nav -->
 <div id="showcase">
   <header>
-      <nav class="cf">
-          <ul class="cf">
+      <nav>
+          <ul>
                <li>
                   <a href="index.html#showcase">Sobre o jogo</a>
               </li>
@@ -36,7 +36,7 @@
       Divirta-se jogando e aprendendo sobre as metas globais que todos nós compartilhamos para criar um futuro melhor para todos! Lembre-se, cada par correto não apenas ganha pontos, mas também aumenta seu conhecimento sobre os desafios e aspirações do nosso mundo. <br> <br>Boa sorte e aproveite o Jogo da Memória das ODS!</p>
       </div>
 </div>
-<hr>
+
 <!-- Music Section -->
 <section id="music" class="section">
   <div class="container">
@@ -58,14 +58,14 @@
   </div>
 </div>
 </section>
-<hr>
+
     <!-- Seção vídeo do jogo -->
     <section id="video" class="section">
         <div class="container">
             <h3>Veja um pouco do Gameplay do jogo.</h3>
             <p class="video">
 
-              <iframe width="853" height="480" src="" title="Jogo da Memória Gameplay" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="853" height="480" src="https://www.youtube.com/embed/MJHR2LVsivI" title="Sustentópolis Gameplay" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            </p>
           </div>
     </section>
@@ -84,8 +84,7 @@
                     </p>
                   
                     <hr>
-                    <a href="Jogo Da Memoria.apk" class="text-secondary">
-                        <i class="fas fa-chevron-right"></i> Clique aqui para baixar
+                    <a href="Jogo Da Memoria.apk" target="_blank" type="download"><img id="baixar-jogo" src="imagens/download.png" rel="Download">
                     </a>
                 </div>
             </div>
