--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class=" container">
       <h1>Jogo da Memória ODS</h1>
       <h2>Projeto realizado pelo <a href="https://cpdi.org.br/" target="_blank" class="externo">CPDI</a> - Além de Jogar, eu Faço Jogos.</h2>
-       <p>O Jogo da Memória das <a href="https://odsbrasil.gov.br/" target="_blank" rel="external">ODS</a> não é apenas uma forma divertida de desafiar sua memória, mas também uma maneira interativa de aprender sobre os <a href="https://odsbrasil.gov.br/" target="_blank" rel="external">ODS</a> estabelecidos pela <a href="https://brasil.un.org/pt-br" target="_blank" rel="external">ONU</a>. Cada par de cartas corresponde a um objetivo específico, como "Educação de Qualidade", "Igualdade de Gênero", "Água Limpa e Saneamento" e muito mais. Ao jogar, você será exposto a esses objetivos e suas metas, contribuindo para um mundo mais consciente e sustentável. <br> 
+       <p>O Jogo da Memória dos <a href="https://odsbrasil.gov.br/" target="_blank" rel="external">ODS</a> não é apenas uma forma divertida de desafiar sua memória, mas também uma maneira interativa de aprender sobre os <a href="https://odsbrasil.gov.br/" target="_blank" rel="external">ODS</a> estabelecidos pela <a href="https://brasil.un.org/pt-br" target="_blank" rel="external">ONU</a>. Cada par de cartas corresponde a um objetivo específico, como "Educação de Qualidade", "Igualdade de Gênero", "Água Limpa e Saneamento" e muito mais. Ao jogar, você será exposto a esses objetivos e suas metas, contribuindo para um mundo mais consciente e sustentável. <br> 
       Divirta-se jogando e aprendendo sobre as metas globais que todos nós compartilhamos para criar um futuro melhor para todos! Lembre-se, cada par correto não apenas ganha pontos, mas também aumenta seu conhecimento sobre os desafios e aspirações do nosso mundo. <br> <br>Boa sorte e aproveite o Jogo da Memória das ODS!</p>
       </div>
 </div>
@@ -80,8 +80,10 @@
                 <div>
                     <h2>Baixe o jogo</h2>
                     <p>
-                        Chegou a sua vez de testar sua memória e aprender sobre os Objetivos do Desenvolvimento Sustentável  de forma divertida. 
-                    </p>
+                        Chegou a sua vez de testar sua memória e aprender sobre os Objetivos do Desenvolvimento Sustentável  de forma divertida. <br>
+                        Por enquanto está disponível apenas a versão Android do jogo. <br>
+                        Clique abaixo para baixar! 
+                     </p>
                   
                     <hr>
                     <a href="Jogo Da Memoria.apk" target="_blank" type="download"><img id="baixar-jogo" src="imagens/download.png" rel="Download">
