--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
             <h3>Veja um pouco do Gameplay do jogo.</h3>
             <p class="video">
 
-              <iframe width="853" height="480" src="https://www.youtube.com/embed/MJHR2LVsivI" title="Sustentópolis Gameplay" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-           </p>
+             <iframe width="875" height="404" src="https://www.youtube.com/embed/EFc_xF-EZZg" title="Jogo da memória" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>   </p>
           </div>
     </section>
 
